# dcmd

./: LICENSE.txt  README.md  dcmd  readme.md
cli/: .gitignore  Cargo.toml  build  dcmd.toml
cli/.cargo/: config.toml
cli/src/: command.rs  config.rs  main.rs
cli/src/command/: builtin.rs  custom.rs  dns.rs
cli/src/config/: env.rs  toml.rs
dns/: Dockerfile  build
doc/: docusaurus.config.js  package-lock.json  package.json
doc/docs/: example.mdx
doc/docs/advanced-configuration/: _category_.json  cli.md  services.md
doc/docs/cli/: _category_.json  built-in-commands.md  built-in-commands.mdx  configuration.md  configuration.mdx  custom-commands.md  custom-commands.mdx
doc/docs/geting-started/: _category_.json  cli-installation.md  cli-installation.mdx  dns-resolution.md  dns-resolution.mdx  dns-server.md  dns-server.mdx  docker-installation.md  docker-installation.mdx  project-configuration.md  project-configuration.mdx  requirements.md  requirements.mdx  start-project.md  start-project.mdx
doc/docs/recipes/: _category_.json  create-template.mdx  ssl.md
doc/docs/templates/: _category_.json  drupal.mdx
doc/docs/troubleshooting/: _category_.json  dns.md  dns.mdx
doc/docs/uninstall/: _category_.json
doc/src/components/BrowserWindow/: index.tsx
doc/src/pages/: index.module.scss  index.tsx  roadmap.mdx
doc/src/styles/: fonts.scss  global.scss
drupal/.docker/: .env.example  .gitignore  docker-compose.yml
drupal/.docker/commands/: backup  bundler  db-cli  drush  logs  npm
templates/drupal/.docker/: .env.example  docker-compose.yml
(+24 files in other folders)
