[package]
name = "dcmd"
version = "1.0.10"
edition = "2021"
license = "MIT"
authors = ["Paul Weinsberg"]

[profile.release]
strip = true

[dependencies]
curl = "0.4.44"
current_platform = "0.2.0"
envmnt = "0.10.4"
indexmap = "1.9.3"
openssl = { version = "0.10.50", features= ["vendored"] }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
